# python-template

./: .commitlintrc.json  CHANGELOG.md  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.ci/: mosquitto.conf
.github/: README.md  renovate.json
.github/workflows/: checks.yml  default.yml  publish.yml  release.yml
src/hello_mqtt/: __init__.py  client.py
tests/: test_hello_mqtt.py
